build/parser.js
module.exports = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = peg$FAILED,
        peg$c1 = function(left, right) { return {type:'Program', body:[left, right]}; },
        peg$c2 = function(left) { return {type:'Program', body:[left]}; },
        peg$c3 = { type: "other", description: "funcdef" },
        peg$c4 = "def",
        peg$c5 = { type: "literal", value: "def", description: "\"def\"" },
        peg$c6 = ":",
        peg$c7 = { type: "literal", value: ":", description: "\":\"" },
        peg$c8 = function(id, params, body) { return {type:'FunctionDeclaration', id:id, params:params, body:body}; },
        peg$c9 = { type: "other", description: "parameters" },
        peg$c10 = "(",
        peg$c11 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c12 = ")",
        peg$c13 = { type: "literal", value: ")", description: "\")\"" },
        peg$c14 = function() { return []; },
        peg$c15 = function(left) { return left; },
        peg$c16 = { type: "other", description: "typedargslist" },
        peg$c17 = [],
        peg$c18 = ",",
        peg$c19 = { type: "literal", value: ",", description: "\",\"" },
        peg$c20 = function(left, right) { 
        			if (right.length == 0) { 
        				return [left]; 
        			} 
        			else { 
        				var ret = [left];
        				for (var i = 0; i < right.length; i++) {
        					ret.push(right[i][2]);
        				}
        				return ret; 
        			} 
        		},
        peg$c21 = { type: "other", description: "tfpdef" },
        peg$c22 = { type: "other", description: "stmt" },
        peg$c23 = function(left) { gVariables = {}; return left; },
        peg$c24 = { type: "other", description: "simple_stmt" },
        peg$c25 = { type: "other", description: "small_stmt" },
        peg$c26 = { type: "other", description: "expr_stmt" },
        peg$c27 = "=",
        peg$c28 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c29 = function(left, right) {
        			if (right.length == 0) {
        				return { type:'ExpressionStatement', expression:left };
        			}
        			else {
        				var ret = right[right.length - 1][3];
        				for (var i = right.length - 2; i >= 0; i--) {
        					ret = { type:'AssignmentExpression', operator:'=', left:right[i][3], right:ret };
        				}
        				if (gVariables.hasOwnProperty(left.name)) {
        					ret = { type:'AssignmentExpression', operator:'=', left:left, right:ret };
        				}
        				else {
        					ret = { 
        						type:'VariableDeclaration', 
        						declarations: [
        						{
        							type:'VariableDeclarator',
        							id:left,
        							init:ret
        						}],
        						kind:'var'
        					};
        					gVariables[left.name] = true;
        				}
        				return ret;
        			}
        		},
        peg$c30 = { type: "other", description: "testlist_star_expr" },
        peg$c31 = { type: "other", description: "flow_stmt" },
        peg$c32 = { type: "other", description: "return_stmt" },
        peg$c33 = "return",
        peg$c34 = { type: "literal", value: "return", description: "\"return\"" },
        peg$c35 = null,
        peg$c36 = function(left) { return {type:'ReturnStatement', argument:left}; },
        peg$c37 = "if",
        peg$c38 = { type: "literal", value: "if", description: "\"if\"" },
        peg$c39 = function(test, consequent) { return {type:'IfStatement', test:test, consequent:consequent}; },
        peg$c40 = { type: "other", description: "suite" },
        peg$c41 = function(left) { 
        			var stmts = [];
        			for (var i = 0; i < left.length; i++) {
        				stmts.push(left[i][1]);
        			}
        			return {type:'BlockStatement', body:stmts}; 
        		},
        peg$c42 = { type: "other", description: "test" },
        peg$c43 = { type: "other", description: "comparison" },
        peg$c44 = function(left, operator, right) { return {type:'BinaryExpression', left:left, operator:operator, right:right}; },
        peg$c45 = { type: "other", description: "comp_op" },
        peg$c46 = "<",
        peg$c47 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c48 = ">",
        peg$c49 = { type: "literal", value: ">", description: "\">\"" },
        peg$c50 = "==",
        peg$c51 = { type: "literal", value: "==", description: "\"==\"" },
        peg$c52 = ">=",
        peg$c53 = { type: "literal", value: ">=", description: "\">=\"" },
        peg$c54 = "<=",
        peg$c55 = { type: "literal", value: "<=", description: "\"<=\"" },
        peg$c56 = "<>",
        peg$c57 = { type: "literal", value: "<>", description: "\"<>\"" },
        peg$c58 = "!=",
        peg$c59 = { type: "literal", value: "!=", description: "\"!=\"" },
        peg$c60 = "in",
        peg$c61 = { type: "literal", value: "in", description: "\"in\"" },
        peg$c62 = "not",
        peg$c63 = { type: "literal", value: "not", description: "\"not\"" },
        peg$c64 = "is",
        peg$c65 = { type: "literal", value: "is", description: "\"is\"" },
        peg$c66 = { type: "other", description: "arith_expr" },
        peg$c67 = /^[+\-]/,
        peg$c68 = { type: "class", value: "[+\\-]", description: "[+\\-]" },
        peg$c69 = function(left, operator, right) { return {type:"BinaryExpression", left:left, operator:operator, right:right}; },
        peg$c70 = /^[*\/%]/,
        peg$c71 = { type: "class", value: "[*\\/%]", description: "[*\\/%]" },
        peg$c72 = "//",
        peg$c73 = { type: "literal", value: "//", description: "\"//\"" },
        peg$c74 = function(left, right) { return {type:'CallExpression', callee:left, arguments:right}; },
        peg$c75 = { type: "other", description: "atom" },
        peg$c76 = { type: "other", description: "trailer" },
        peg$c77 = function(arguments) { return arguments; },
        peg$c78 = function(left, right) { if (right.length == 0) { return left; } else { right.unshift(left); return right; } },
        peg$c79 = function(left, right) {
        			var ret = [right];
        			for (var i = 0; i < left.length; i++) {
        				ret.unshift(left[i][0]);
        			}
        			return ret; 
        		},
        peg$c80 = { type: "other", description: "INDENT" },
        peg$c81 = "  ",
        peg$c82 = { type: "literal", value: "  ", description: "\"  \"" },
        peg$c83 = "\t",
        peg$c84 = { type: "literal", value: "\t", description: "\"\\t\"" },
        peg$c85 = /^[a-zA-Z]/,
        peg$c86 = { type: "class", value: "[a-zA-Z]", description: "[a-zA-Z]" },
        peg$c87 = function(left) { return {type:'Identifier', name:left.join("")}; },
        peg$c88 = { type: "other", description: "NEWLINE" },
        peg$c89 = "\n",
        peg$c90 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c91 = "\r\n",
        peg$c92 = { type: "literal", value: "\r\n", description: "\"\\r\\n\"" },
        peg$c93 = /^[0-9]/,
        peg$c94 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c95 = function(digits) { return {type:'Literal', value:parseInt(digits.join(""), 10)}; },
        peg$c96 = "'",
        peg$c97 = { type: "literal", value: "'", description: "\"'\"" },
        peg$c98 = /^[^']/,
        peg$c99 = { type: "class", value: "[^']", description: "[^']" },
        peg$c100 = function(left) { return {type:'Literal', value:left.join("")}; },
        peg$c101 = "\"",
        peg$c102 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c103 = /^[^"]/,
        peg$c104 = { type: "class", value: "[^\"]", description: "[^\"]" },
        peg$c105 = { type: "other", description: "WHITESPACE" },
        peg$c106 = /^[ \t]/,
        peg$c107 = { type: "class", value: "[ \\t]", description: "[ \\t]" },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parsestart() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = peg$parseWHITESPACE();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseNEWLINE();
        if (s2 === peg$FAILED) {
          s2 = peg$parsestmt();
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseWHITESPACE();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseNEWLINE();
            if (s4 === peg$FAILED) {
              s4 = peg$parsestmt();
            }
            if (s4 !== peg$FAILED) {
              peg$reportedPos = s0;
              s1 = peg$c1(s2, s4);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseWHITESPACE();
        if (s1 !== peg$FAILED) {
          s2 = peg$parseNEWLINE();
          if (s2 === peg$FAILED) {
            s2 = peg$parsestmt();
          }
          if (s2 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c2(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      }

      return s0;
    }

    function peg$parsefuncdef() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

      peg$silentFails++;
      s0 = peg$currPos;
      if (input.substr(peg$currPos, 3) === peg$c4) {
        s1 = peg$c4;
        peg$currPos += 3;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c5); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseWHITESPACE();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseNAME();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseWHITESPACE();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseparameters();
              if (s5 !== peg$FAILED) {
                s6 = peg$parseWHITESPACE();
                if (s6 !== peg$FAILED) {
                  if (input.charCodeAt(peg$currPos) === 58) {
                    s7 = peg$c6;
                    peg$currPos++;
                  } else {
                    s7 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c7); }
                  }
                  if (s7 !== peg$FAILED) {
                    s8 = peg$parseWHITESPACE();
                    if (s8 !== peg$FAILED) {
                      s9 = peg$parsesuite();
                      if (s9 !== peg$FAILED) {
                        peg$reportedPos = s0;
                        s1 = peg$c8(s3, s5, s9);
                        s0 = s1;
                      } else {
                        peg$currPos = s0;
                        s0 = peg$c0;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$c0;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c0;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c3); }
      }

      return s0;
    }

    function peg$parseparameters() {
      var s0, s1, s2, s3;

      peg$silentFails++;
      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 40) {
        s1 = peg$c10;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c11); }
      }
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 41) {
          s2 = peg$c12;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c13); }
        }
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c14();
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 40) {
          s1 = peg$c10;
          peg$currPos++;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c11); }
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$parsetypedargslist();
          if (s2 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 41) {
              s3 = peg$c12;
              peg$currPos++;
            } else {
              s3 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c13); }
            }
            if (s3 !== peg$FAILED) {
              peg$reportedPos = s0;
              s1 = peg$c15(s2);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c9); }
      }

      return s0;
    }

    function peg$parsetypedargslist() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$parsetfpdef();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseWHITESPACE();
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$currPos;
          if (input.charCodeAt(peg$currPos) === 44) {
            s5 = peg$c18;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c19); }
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parseWHITESPACE();
            if (s6 !== peg$FAILED) {
              s7 = peg$parsetfpdef();
              if (s7 !== peg$FAILED) {
                s5 = [s5, s6, s7];
                s4 = s5;
              } else {
                peg$currPos = s4;
                s4 = peg$c0;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$c0;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$c0;
          }
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$currPos;
            if (input.charCodeAt(peg$currPos) === 44) {
              s5 = peg$c18;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c19); }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parseWHITESPACE();
              if (s6 !== peg$FAILED) {
                s7 = peg$parsetfpdef();
                if (s7 !== peg$FAILED) {
                  s5 = [s5, s6, s7];
                  s4 = s5;
                } else {
                  peg$currPos = s4;
                  s4 = peg$c0;
                }
              } else {
                peg$currPos = s4;
                s4 = peg$c0;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$c0;
            }
          }
          if (s3 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c20(s1, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c16); }
      }

      return s0;
    }

    function peg$parsetfpdef() {
      var s0, s1;

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$parseNAME();
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c15(s1);
      }
      s0 = s1;
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c21); }
      }

      return s0;
    }

    function peg$parsestmt() {
      var s0, s1;

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$parsesimple_stmt();
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c23(s1);
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parsecompound_stmt();
        if (s1 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c15(s1);
        }
        s0 = s1;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c22); }
      }

      return s0;
    }

    function peg$parsesimple_stmt() {
      var s0, s1, s2, s3;

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$parsesmall_stmt();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseWHITESPACE();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseNEWLINE();
          if (s3 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c15(s1);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c24); }
      }

      return s0;
    }

    function peg$parsesmall_stmt() {
      var s0, s1;

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$parseflow_stmt();
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c15(s1);
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseexpr_stmt();
        if (s1 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c15(s1);
        }
        s0 = s1;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c25); }
      }

      return s0;
    }

    function peg$parseexpr_stmt() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8;

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$parsetestlist_star_expr();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseWHITESPACE();
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$currPos;
          s5 = peg$parseWHITESPACE();
          if (s5 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 61) {
              s6 = peg$c27;
              peg$currPos++;
            } else {
              s6 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c28); }
            }
            if (s6 !== peg$FAILED) {
              s7 = peg$parseWHITESPACE();
              if (s7 !== peg$FAILED) {
                s8 = peg$parsetestlist_star_expr();
                if (s8 !== peg$FAILED) {
                  s5 = [s5, s6, s7, s8];
                  s4 = s5;
                } else {
                  peg$currPos = s4;
                  s4 = peg$c0;
                }
              } else {
                peg$currPos = s4;
                s4 = peg$c0;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$c0;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$c0;
          }
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$currPos;
            s5 = peg$parseWHITESPACE();
            if (s5 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 61) {
                s6 = peg$c27;
                peg$currPos++;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c28); }
              }
              if (s6 !== peg$FAILED) {
                s7 = peg$parseWHITESPACE();
                if (s7 !== peg$FAILED) {
                  s8 = peg$parsetestlist_star_expr();
                  if (s8 !== peg$FAILED) {
                    s5 = [s5, s6, s7, s8];
                    s4 = s5;
                  } else {
                    peg$currPos = s4;
                    s4 = peg$c0;
                  }
                } else {
                  peg$currPos = s4;
                  s4 = peg$c0;
                }
              } else {
                peg$currPos = s4;
                s4 = peg$c0;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$c0;
            }
          }
          if (s3 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c29(s1, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c26); }
      }

      return s0;
    }

    function peg$parsetestlist_star_expr() {
      var s0, s1;

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$parsetest();
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c15(s1);
      }
      s0 = s1;
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c30); }
      }

      return s0;
    }

    function peg$parseflow_stmt() {
      var s0, s1;

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$parsereturn_stmt();
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c15(s1);
      }
      s0 = s1;
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c31); }
      }

      return s0;
    }

    function peg$parsereturn_stmt() {
      var s0, s1, s2, s3;
